# sovereign-music-player

./: CLAUDE.md  README.md  package-lock.json  package.json
.claude/: settings.local.json
scripts/: scan-assets.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  equalizer.rs  lib.rs  visualizer.rs
src/lib/components/: AlbumCard.svelte  EmojiGrid.svelte  EmojiPalette.svelte  GradientPulse.svelte  MiniPlayer.svelte  PlayerControls.svelte  TimerVisualization.svelte  TrackItem.svelte
src/lib/cosmic/: colors.ts  effects.ts  index.ts
src/lib/data/: emojis.ts
src/lib/stores/: library.svelte.ts  mood.svelte.ts  player.svelte.ts  playlist.svelte.ts  theme.svelte.ts
src/lib/theme/: theme.ts
src/lib/types/: types.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/equalizer/: +page.svelte
src/routes/nowplaying/: +page.svelte
src/routes/playlists/: +page.svelte
src/routes/playlists/[id]/: +page.svelte
src/routes/queue/: +page.svelte
src/routes/resonance/: +page.svelte
src/routes/search/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/timer/: +page.svelte
src/routes/visualizer/: +page.svelte
